syntax = "proto3";

package book;

service BookService {
  rpc ViewAllBooks (Empty) returns (BooksResponse);
  rpc ViewBook (BookRequest) returns (BookResponse);
  rpc AddBook (NewBook) returns (BookResponse);
  rpc EditBook (Book) returns (BookResponse);
  rpc DeleteBook (BookRequest) returns (Empty);
}

message Empty {}

message BookRequest {
  string id = 1;
}

message NewBook {
  string title = 1;
  string author = 2;
  string description = 3;
  int32 publishedYear = 4;
}

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  string description = 4;
  int32 publishedYear = 5;
}

message BooksResponse {
  repeated Book books = 1;
}

message BookResponse {
  Book book = 1;
}